= 2.0 / ?? (future release changes, like a reminder to self)
  
  - prsnt? and absnt? are now finally banned into oblivion. Wasting vocals for
    the win. 
    
= 1.4.0 / ???
  + Optimistic parse: Parsing is two phase, with the first phase assuming 
    there will be no errors.

  ! #error_tree and #cause removed from all of parslet. The 
    Parslet::ParseFailed exception now contains a #cause field that can
    be asked for an #ascii_tree as before. 
    Cleaner internal error handling, not stateful in atoms anymore. Some 
    parsers will see correct error reporting for the first time. (issue #65)

  + Made it possible to pass a custom Parslet::Source implementor to #parse.
    (see #63)
    
  + #parse has now a second argument that is an options hash:
    + Using the prefix: true option, you can do a string prefix parse. 
    + Using the error_reporter: ... option, you can replace error reporting 
      by your own implementation.

  - VM engine on the way out. No benefit except for the intellectual
    challenge.
    
= 1.3.0 / 5Mar2012

  ! Parslet::Transform::Context is now much more well-behaved. It has
    #respond_to? and #method_missing; it now looks like a plain old Ruby
    object with instance variables and attribute readers.

  - Grammar transforms turned out to be a dead end and have been removed. 

  ! A few problems in error message generation have been fixed. This will
  	improve diagnostics further.
	
  + A VM driven parser engine: Removes the limitation that parsing needs a 
    lot of stack space, something dearly missing from Ruby 1.9.3 fibers.
    This engine is experimental and might be removed in the future. 

  ! Interaction with mathn fixed - Line number generation will terminate. 
	
  . Internal reorganisation, removing cruft and bit rot.
    
= 1.2.3 / 22Sep2011

  + Transform#apply can now be called with a hash as second argument. This 
    provides bindings and a way to inject context.
